[package]
name = "environment"
version = "0.1.1"
authors = ["Freyskeyd <simon.paitrault@gmail.com>"]
description = "Helper to deal with environment variables."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Freyskeyd/environment.git"
homepage = "https://github.com/Freyskeyd/environment"
documentation = "http://docs.rs/environment/"
readme = "README.md"
keywords = ["environment", "env"]

[dependencies]
regex = "0.2"
